@@ -154,8 +154,8 @@ class SettingsController extends Controller
 
         $account = auth()->user()->account;
 
-        if ($account->isSubscribed() && auth()->user()->has_access_to_paid_version_for_free == 0) {
-            $account->subscription($account->getSubscribedPlanName())->cancelNow();
+        if ($account->isSubscribed() && ! $account->has_access_to_paid_version_for_free) {
+            $account->subscriptionCancel();
         }
 
         DB::table('accounts')->where('id', $account->id)->delete();
