@@ -716,7 +716,9 @@ class Account extends Model
     {
         $plan = $this->subscriptions()->first();
 
-        return $plan->stripe_plan;
+        if (! is_null($plan)) {
+            return $plan->stripe_plan;
+        }
     }
 
     /**
@@ -728,7 +730,21 @@ class Account extends Model
     {
         $plan = $this->subscriptions()->first();
 
-        return $plan->name;
+        if (! is_null($plan)) {
+            return $plan->name;
+        }
+    }
+
+    /**
+     * Cancel the plan the account is subscribed to.
+     */
+    public function subscriptionCancel()
+    {
+        $plan = $this->subscriptions()->first();
+
+        if (! is_null($plan)) {
+            return $plan->cancelNow();
+        }
     }
 
     /**
